minor bug fix: link wrap

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -182,6 +182,7 @@
     width: 25ch;
     text-overflow: ellipsis;
     overflow: hidden;
+    text-wrap: nowrap;
 }
 
 .no-links{
